tests/tests/snapshots/test__typescript__native-ts-enum-docs.snap
---
source: tests/tests/typescript.rs
expression: "Typescript::default().export(&resolved).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
// Documented enum
export enum DocEnum {

	// First variant
	A = "A",

	// Second variant
	B = "B",
}
