tests/tests/snapshots/test__typescript__native-ts-enum-mixed.snap
---
source: tests/tests/typescript.rs
expression: "Typescript::default().export(&resolved).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export enum Direction {
	Up = "Up",
	Down = "Down",
	Left = "Left",
	Right = "Right",
}

export type RegularEnum = "Red" | "Green" | "Blue";
