tests/tests/snapshots/test__typescript__native-ts-enum-rename.snap
---
source: tests/tests/typescript.rs
expression: "Typescript::default().export(&resolved).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export enum LogLevel {
	DEBUG = "DEBUG",
	INFO = "INFO",
	WARN = "WARN",
	ERROR = "ERROR",
}
