tests/tests/snapshots/test__typescript__native-ts-enum-skip.snap
---
source: tests/tests/typescript.rs
expression: "Typescript::default().export(&resolved).unwrap()"
---
// This file has been generated by Specta. Do not edit this file manually.
export enum WithSkip {
	Kept = "Kept",
	AlsoKept = "AlsoKept",
}
